flujo departemanto con usuario